--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,7 @@ application {
 }
 
 shadowJar {
-    archiveBaseName = "duke"
-    archiveClassifier = null
+    archiveFileName = 'OscarL.jar'
 }
 
 run{
