Revert "Main & Command : assertion has been implemented"

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,8 @@ application {
 }
 
 shadowJar {
-    archiveFileName = 'OscarL.jar'
+    archiveBaseName = "duke"
+    archiveClassifier = null
 }
 
 run{
